# graph-bot

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: bot.yaml  hiaricl.yaml  model.yaml  paths.yaml
configs/pricing/: pricing_v0.yaml
data/: exp2_online_88.jsonl  exp2_seed_10.jsonl  game24_buffer_98.jsonl  game24_buffer_98.shuffle_1.jsonl  game24_buffer_98.shuffle_2.jsonl  game24_buffer_98.shuffle_3.jsonl  game24_long_392.jsonl  remaining_exp3.jsonl  remaining_exp3_final.jsonl
data/inputs/: test_problem_minimal.jsonl
docs/: exp5_issue_resolution.md  latency_reporting_policy.md
docs/analysis/: exp5_issues_verified.md
docs/checklists/: exp5_smoke_runbook.md  integration_checklist.md  vllm_loading_checklist.md
docs/metrics/: metrics_definitions.md  token_cost_boundaries.md  token_tracker_schema_v0.json
docs/policies/: no_interactive_policy.md
docs/specs/: amortization_io_contract.md  bot_alignment_solve_instantiate_meta_reasoner.md  fix_list_log_schema.md  flat_template_rag_vs_bot_mode.md  model_output_parsing_spec.md  task_module_authoring.md  (+6 more)
scripts/: analyze_baseline_repeats.py  analyze_exp1_exp3.py  analyze_exp5_repeats.py  analyze_retrieval_correlation.py  analyze_week7.py  calc_exp1_stats.py  convert_game24.py  run_baselines.sh  run_baselines_repeats.sh  run_baselines_sensitivity.sh  run_exp2_formal.sh  run_exp4_dryrun.sh  run_g2_openai.sh  validator_parity_check_run.py  verify_game24.py  viz_exp1_3.py
tests/: conftest.py  test_amortization.py  test_contract.py  test_timeout.py
(+72 files in other folders)
